--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,31 @@ services:
     build:
       context: ./ResourceServer
       dockerfile: Dockerfile
-    image: 'resserver:2'
+    image: 'resserver:1'
     expose:
       - 8081
     ports:
       - '8081:8081'
     depends_on:
       - db
+
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    image: 'frontend/angular-app:latest'
+    volumes:
+      # Map ./frontend to ./app for development (remove and rebuild for production)
+      # - ./frontend:/app
+      # Use a persistent volume for node_modules so that it does not get mapped
+      - node_modules:/app/node_modules
+    expose:
+      - 80
+    ports:
+      - '8000:80'
+    depends_on:
+      - resserver
 
 volumes:
   node_modules:
